--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -14,51 +14,58 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondoxd"
-            android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
-            <TextView
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="Bienvenido!"
-                android:textSize="18sp" />
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="match_parent"
+                android:background="@drawable/fondoxd"
+                android:gravity="center_horizontal|center_vertical"
+                android:orientation="vertical">
 
-            <TextView
-                android:id="@+id/textView"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:gravity="center_horizontal"
-                android:text="A Balance"
-                android:textSize="18sp" />
+                <TextView
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="Bienvenido!"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/textView3"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/textView"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:gravity="center_horizontal"
+                    android:text="A Balance"
+                    android:textSize="18sp" />
 
-            <TextView
-                android:id="@+id/textView2"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="nosotros te ayudaremos en tus labores diarias!"
-                android:textSize="18sp" />
+                <TextView
+                    android:id="@+id/textView3"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:textSize="18sp" />
 
-            <ImageView
-                android:id="@+id/imageView2"
-                android:layout_width="299dp"
-                android:layout_height="238dp"
-                android:src="@drawable/balance" />
+                <TextView
+                    android:id="@+id/textView2"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:text="nosotros te ayudaremos en tus labores diarias!"
+                    android:textSize="18sp" />
 
-            <Button
-                android:id="@+id/button"
-                android:layout_width="75dp"
-                android:layout_height="60dp"
-                android:background="@drawable/botocuadrado"
-                android:onClick="siguiente"
-                android:text="Siguiente" />
+                <ImageView
+                    android:id="@+id/imageView2"
+                    android:layout_width="299dp"
+                    android:layout_height="238dp"
+                    android:src="@drawable/balance" />
+
+                <Button
+                    android:id="@+id/button"
+                    android:layout_width="75dp"
+                    android:layout_height="60dp"
+                    android:background="@drawable/botocuadrado"
+                    android:onClick="siguiente"
+                    android:text="Siguiente" />
+            </LinearLayout>
         </LinearLayout>
+
     </FrameLayout>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
