--- a/app/src/main/res/layout/activity_cuestionario.xml
+++ b/app/src/main/res/layout/activity_cuestionario.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/icon6"
-    tools:context=".cuestionario">
+    tools:context=".Cuestionario">
 
     <FrameLayout
         android:layout_width="match_parent"
