--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".acerca">
+    tools:context=".Acerca_de">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -65,6 +65,7 @@
                         android:layout_height="65dp"
                         android:layout_weight="1"
                         android:background="@drawable/botocuadrado"
+                        android:onClick="atras"
                         android:text="Atras" />
 
                     <Button
