--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -14,6 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
+            android:gravity="center|center_horizontal|center_vertical"
             android:orientation="vertical">
 
             <LinearLayout
@@ -47,6 +48,7 @@
                     android:id="@+id/textView2"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
+                    android:gravity="center_horizontal|center_vertical"
                     android:text="nosotros te ayudaremos en tus labores diarias!"
                     android:textSize="18sp" />
 
