--- a/app/src/main/res/layout/activity_logueo.xml
+++ b/app/src/main/res/layout/activity_logueo.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="#25B0EF"
-    tools:context=".login">
+    tools:context=".Logueo">
 
     <FrameLayout
         android:layout_width="match_parent"
