--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -5,7 +5,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:background="@drawable/xc"
-    tools:context=".registro">
+    tools:context=".Registro">
 
     <FrameLayout
         android:layout_width="match_parent"
