--- a/app/src/main/res/layout/activity_tips.xml
+++ b/app/src/main/res/layout/activity_tips.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".niveles">
+    tools:context=".Tips">
 
     <FrameLayout
         android:layout_width="match_parent"
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondoxd"
+            android:background="@drawable/fondo"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
@@ -34,15 +34,14 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal|left"
-                    android:text="Hola segun tus respuestas tu"
+                    android:text="Hola tenemos algunos tips para ti"
                     android:textSize="14sp"
                     android:textStyle="normal|bold" />
 
                 <TextView
                     android:id="@+id/textView18"
                     android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="IMC ES DE : " />
+                    android:layout_height="wrap_content" />
 
                 <TextView
                     android:id="@+id/textView37"
@@ -53,14 +52,13 @@
                     android:id="@+id/textView19"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:gravity="center_horizontal|left"
-                    android:text="Porque" />
+                    android:gravity="center_horizontal|left" />
 
                 <TextView
                     android:id="@+id/textView20"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
-                    android:text="tus niveles son" />
+                    android:text="Como te sientes?" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -125,6 +123,5 @@
                 android:onClick="siguiente"
                 android:text="continuar" />
         </LinearLayout>
-
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
