--- a/app/src/main/res/layout/activity_tips.xml
+++ b/app/src/main/res/layout/activity_tips.xml
@@ -30,7 +30,7 @@
                     android:layout_height="wrap_content" />
 
                 <TextView
-                    android:id="@+id/textView6"
+                    android:id="@+id/textVie6"
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal|left"
