--- a/app/src/main/res/layout/activity_msje_encuesta.xml
+++ b/app/src/main/res/layout/activity_msje_encuesta.xml
@@ -34,7 +34,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal|left"
-                    android:text="Hola recibimos tu encuesta"
+                    android:text="Hola recibimos tu encuesta!"
                     android:textSize="14sp"
                     android:textStyle="normal|bold" />
 
