--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -32,8 +32,8 @@
 
                 <TextView
                     android:id="@+id/textView8"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
+                    android:layout_width="362dp"
+                    android:layout_height="60dp"
                     android:gravity="center_horizontal"
                     android:text="Que comencemos este recorrido de auto-reconocimiento"
                     android:textSize="18sp" />
