--- a/app/src/main/res/layout/activity_juegos.xml
+++ b/app/src/main/res/layout/activity_juegos.xml
@@ -20,8 +20,8 @@
 
             <Button
                 android:id="@+id/button14"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
+                android:layout_width="236dp"
+                android:layout_height="223dp"
                 android:background="@drawable/icon4" />
         </LinearLayout>
     </FrameLayout>
