Login validacion incompleta

--- a/app/src/main/res/layout/activity_msje_encuesta.xml
+++ b/app/src/main/res/layout/activity_msje_encuesta.xml
@@ -13,14 +13,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondoxd"
+            android:background="@drawable/fondobienvenida"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="352dp"
                 android:layout_height="362dp"
-                android:background="@drawable/fondo"
+                android:background="@drawable/fondomenu"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
@@ -72,7 +72,7 @@
                 android:id="@+id/button13"
                 android:layout_width="85dp"
                 android:layout_height="65dp"
-                android:background="@drawable/botocuadrado"
+                android:background="@drawable/botocuadrad"
                 android:onClick="atras"
                 android:text="Atras" />
 
@@ -80,7 +80,7 @@
                 android:id="@+id/button5"
                 android:layout_width="85dp"
                 android:layout_height="65dp"
-                android:background="@drawable/botocuadrado"
+                android:background="@drawable/botocuadrad"
                 android:onClick="adelante"
                 android:text="continuar" />
         </LinearLayout>
