--- a/app/src/main/res/layout/activity_acerca_de.xml
+++ b/app/src/main/res/layout/activity_acerca_de.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondoxd"
+            android:background="@drawable/fondobienvenida"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
@@ -64,7 +64,7 @@
                         android:layout_width="75dp"
                         android:layout_height="65dp"
                         android:layout_weight="1"
-                        android:background="@drawable/botocuadrado"
+                        android:background="@drawable/botocuadrad"
                         android:onClick="atras"
                         android:text="Atras" />
 
@@ -73,7 +73,7 @@
                         android:layout_width="75dp"
                         android:layout_height="60dp"
                         android:layout_weight="1"
-                        android:background="@drawable/botocuadrado"
+                        android:background="@drawable/botocuadrad"
                         android:onClick="siguiente"
                         android:text="siguiente" />
                 </LinearLayout>
