--- a/app/src/main/res/layout/activity_ajustes.xml
+++ b/app/src/main/res/layout/activity_ajustes.xml
@@ -9,7 +9,7 @@
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/fondo">
+        android:background="@drawable/fondomenu">
 
         <TextView
             android:id="@+id/textView27"
@@ -29,7 +29,7 @@
             <LinearLayout
                 android:layout_width="318dp"
                 android:layout_height="387dp"
-                android:background="@drawable/fondo"
+                android:background="@drawable/fondomenu"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
@@ -72,7 +72,7 @@
                     android:id="@+id/button8"
                     android:layout_width="80dp"
                     android:layout_height="65dp"
-                    android:background="@drawable/botocuadrado"
+                    android:background="@drawable/botocuadrad"
                     android:text="Guardar" />
 
             </LinearLayout>
