--- a/app/src/main/res/layout/activity_bienvenida.xml
+++ b/app/src/main/res/layout/activity_bienvenida.xml
@@ -20,7 +20,7 @@
             <LinearLayout
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
-                android:background="@drawable/fondoxd"
+                android:background="@drawable/fondobienvenida"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
@@ -56,13 +56,13 @@
                     android:id="@+id/imageView2"
                     android:layout_width="281dp"
                     android:layout_height="225dp"
-                    android:src="@drawable/balance" />
+                    android:src="@drawable/balanc" />
 
                 <Button
                     android:id="@+id/button"
                     android:layout_width="75dp"
                     android:layout_height="60dp"
-                    android:background="@drawable/botocuadrado"
+                    android:background="@drawable/botocuadrad"
                     android:onClick="siguiente"
                     android:text="Siguiente" />
             </LinearLayout>
