--- a/app/src/main/res/layout/activity_cuestionario.xml
+++ b/app/src/main/res/layout/activity_cuestionario.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/icon6"
+    android:background="@drawable/icon60"
     tools:context=".Cuestionario">
 
     <FrameLayout
@@ -14,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondoxd"
+            android:background="@drawable/fondobienvenida"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
@@ -37,7 +37,7 @@
             <TableLayout
                 android:layout_width="398dp"
                 android:layout_height="257dp"
-                android:background="@drawable/fondo"
+                android:background="@drawable/fondomenu"
                 android:gravity="center_horizontal|center_vertical">
 
                 <TableRow
@@ -249,7 +249,7 @@
                 android:id="@+id/button4"
                 android:layout_width="133dp"
                 android:layout_height="46dp"
-                android:background="@drawable/botocuadrado"
+                android:background="@drawable/botocuadrad"
                 android:onClick="aceptar"
                 android:text="Siguiente" />
 
