--- a/app/src/main/res/layout/activity_imc_salud.xml
+++ b/app/src/main/res/layout/activity_imc_salud.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondo"
+            android:background="@drawable/fondomenu"
             android:gravity="center|center_horizontal|center_vertical"
             android:orientation="vertical">
 
@@ -122,7 +122,7 @@
                     android:layout_width="65dp"
                     android:layout_height="45dp"
                     android:layout_weight="1"
-                    android:background="@drawable/icon6" />
+                    android:background="@drawable/icon60" />
             </LinearLayout>
 
         </LinearLayout>
