--- a/app/src/main/res/layout/activity_juegos.xml
+++ b/app/src/main/res/layout/activity_juegos.xml
@@ -4,13 +4,13 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
+    android:background="@drawable/fondomenu"
     tools:context=".Juegos">
 
     <FrameLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:background="@drawable/fondo">
+        android:background="@drawable/fondomenu">
 
         <LinearLayout
             android:layout_width="match_parent"
@@ -22,7 +22,7 @@
                 android:id="@+id/button14"
                 android:layout_width="236dp"
                 android:layout_height="223dp"
-                android:background="@drawable/icon4" />
+                android:background="@drawable/icon40" />
         </LinearLayout>
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
