--- a/app/src/main/res/layout/activity_logueo.xml
+++ b/app/src/main/res/layout/activity_logueo.xml
@@ -14,7 +14,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondoxd"
+            android:background="@drawable/fondobienvenida"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
@@ -36,7 +36,7 @@
                     android:id="@+id/imageView"
                     android:layout_width="140dp"
                     android:layout_height="132dp"
-                    app:srcCompat="@drawable/balance" />
+                    app:srcCompat="@drawable/balanc" />
 
                 <TextView
                     android:id="@+id/textView25"
