--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -13,7 +13,7 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondo"
+            android:background="@drawable/fondomenu"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
@@ -37,7 +37,7 @@
                             android:id="@+id/button18"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
-                            android:background="@drawable/icon1"
+                            android:background="@drawable/icon10"
                             android:gravity="center_horizontal|center_vertical"
                             android:onClick="ajustes" />
 
@@ -45,7 +45,7 @@
                             android:id="@+id/button19"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
-                            android:background="@drawable/icon2"
+                            android:background="@drawable/icon20"
                             android:onClick="Tips" />
 
                     </TableRow>
@@ -71,14 +71,14 @@
                             android:id="@+id/button20"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
-                            android:background="@drawable/mp3"
+                            android:background="@drawable/mp3m"
                             android:onClick="musica" />
 
                         <Button
                             android:id="@+id/button9"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
-                            android:background="@drawable/icon4"
+                            android:background="@drawable/icon40"
                             android:onClick="Juegos" />
 
                     </TableRow>
@@ -104,14 +104,14 @@
                             android:id="@+id/button22"
                             android:layout_width="125dp"
                             android:layout_height="130dp"
-                            android:background="@drawable/icon5"
+                            android:background="@drawable/icon50"
                             android:onClick="imc_salud" />
 
                         <Button
                             android:id="@+id/button23"
                             android:layout_width="125dp"
                             android:layout_height="130dp"
-                            android:background="@drawable/icon6"
+                            android:background="@drawable/icon60"
                             android:onClick="Tareas" />
 
                     </TableRow>
