--- a/app/src/main/res/layout/activity_musica.xml
+++ b/app/src/main/res/layout/activity_musica.xml
@@ -4,7 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/fondo"
+    android:background="@drawable/fondomenu"
     tools:context=".Musica">
 
     <FrameLayout
@@ -35,7 +35,7 @@
                     android:id="@+id/imageView5"
                     android:layout_width="231dp"
                     android:layout_height="254dp"
-                    app:srcCompat="@drawable/nota" />
+                    app:srcCompat="@drawable/musica" />
 
                 <LinearLayout
                     android:layout_width="250dp"
