--- a/app/src/main/res/layout/activity_tips.xml
+++ b/app/src/main/res/layout/activity_tips.xml
@@ -13,14 +13,14 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:background="@drawable/fondo"
+            android:background="@drawable/fondomenu"
             android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
             <LinearLayout
                 android:layout_width="352dp"
                 android:layout_height="362dp"
-                android:background="@drawable/fondo"
+                android:background="@drawable/fondomenu"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
 
@@ -112,14 +112,14 @@
                 android:id="@+id/button13"
                 android:layout_width="85dp"
                 android:layout_height="65dp"
-                android:background="@drawable/botocuadrado"
+                android:background="@drawable/botocuadrad"
                 android:text="Atras" />
 
             <Button
                 android:id="@+id/button5"
                 android:layout_width="85dp"
                 android:layout_height="65dp"
-                android:background="@drawable/botocuadrado"
+                android:background="@drawable/botocuadrad"
                 android:onClick="siguiente"
                 android:text="continuar" />
         </LinearLayout>
