--- a/app/src/main/res/layout/activity_imc_salud.xml
+++ b/app/src/main/res/layout/activity_imc_salud.xml
@@ -31,7 +31,7 @@
                 android:layout_width="290dp"
                 android:layout_height="151dp"
                 android:gravity="center"
-                android:text="Averigua nuestros consejos"
+                android:text="Cuentanos sobre ti!"
                 android:textSize="18sp" />
 
             <LinearLayout
@@ -79,25 +79,38 @@
                         android:layout_height="match_parent">
 
                         <EditText
-                            android:id="@+id/editTextTextPersonName4"
+                            android:id="@+id/idpeso"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="#63FFFFFF"
                             android:ems="10"
                             android:inputType="textPersonName" />
 
                         <EditText
-                            android:id="@+id/editTextTextPersonName5"
+                            android:id="@+id/idestatura"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:background="#61FFFFFF"
                             android:ems="10"
                             android:inputType="textPersonName" />
+
                     </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
-                        android:layout_height="match_parent" />
+                        android:layout_height="match_parent" >
+
+                        <TextView
+                            android:id="@+id/idmsje"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center_horizontal"
+                            android:text="Tu imc es" />
+
+                        <TextView
+                            android:id="@+id/idvalor"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:text="TextView" />
+                    </TableRow>
 
                     <TableRow
                         android:layout_width="match_parent"
@@ -122,7 +135,8 @@
                     android:layout_width="65dp"
                     android:layout_height="45dp"
                     android:layout_weight="1"
-                    android:background="@drawable/icon60" />
+                    android:background="@drawable/icon60"
+                    android:onClick="ver" />
             </LinearLayout>
 
         </LinearLayout>
