--- a/app/src/main/res/layout/activity_juegos.xml
+++ b/app/src/main/res/layout/activity_juegos.xml
@@ -15,14 +15,44 @@
         <LinearLayout
             android:layout_width="match_parent"
             android:layout_height="match_parent"
-            android:gravity="center|center_horizontal"
+            android:gravity="center_horizontal|center_vertical"
             android:orientation="vertical">
 
-            <Button
-                android:id="@+id/button14"
-                android:layout_width="236dp"
-                android:layout_height="223dp"
-                android:background="@drawable/icon40" />
+            <ImageView
+                android:id="@+id/imageView7"
+                android:layout_width="120dp"
+                android:layout_height="100dp"
+                android:background="@drawable/entretenimiento"
+                app:srcCompat="@drawable/electronica" />
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="center|center_horizontal|center_vertical"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/button14"
+                    android:layout_width="200dp"
+                    android:layout_height="201dp"
+                    android:background="@drawable/quiz" />
+
+            </LinearLayout>
+
+            <LinearLayout
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:gravity="left"
+                android:orientation="vertical">
+
+                <Button
+                    android:id="@+id/button27"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:background="@drawable/abc_vector_test"
+                    android:gravity="left" />
+            </LinearLayout>
         </LinearLayout>
+
     </FrameLayout>
 </androidx.constraintlayout.widget.ConstraintLayout>
