--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -37,7 +37,7 @@
                             android:id="@+id/button18"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
-                            android:background="@drawable/icon10"
+                            android:background="@drawable/settings"
                             android:gravity="center_horizontal|center_vertical"
                             android:onClick="ajustes" />
 
@@ -45,7 +45,7 @@
                             android:id="@+id/button23"
                             android:layout_width="125dp"
                             android:layout_height="130dp"
-                            android:background="@drawable/icon60"
+                            android:background="@drawable/agenda"
                             android:onClick="Tareas" />
 
                     </TableRow>
@@ -59,7 +59,15 @@
                             android:id="@+id/textView65"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="   " />
+                            android:gravity="center"
+                            android:text="Ajustes" />
+
+                        <TextView
+                            android:id="@+id/textView58"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Tareas" />
                     </TableRow>
 
                     <TableRow
@@ -71,14 +79,14 @@
                             android:id="@+id/button20"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
-                            android:background="@drawable/mp3m"
+                            android:background="@drawable/music"
                             android:onClick="musica" />
 
                         <Button
                             android:id="@+id/button9"
                             android:layout_width="150dp"
                             android:layout_height="150dp"
-                            android:background="@drawable/icon40"
+                            android:background="@drawable/juegos"
                             android:onClick="Juegos" />
 
                     </TableRow>
@@ -92,7 +100,15 @@
                             android:id="@+id/textView65"
                             android:layout_width="wrap_content"
                             android:layout_height="wrap_content"
-                            android:text="   " />
+                            android:gravity="center"
+                            android:text="Musica" />
+
+                        <TextView
+                            android:id="@+id/textView60"
+                            android:layout_width="wrap_content"
+                            android:layout_height="wrap_content"
+                            android:gravity="center"
+                            android:text="Juegos" />
                     </TableRow>
 
                     <TableRow
