--- a/app/src/main/res/layout/activity_cuestionario.xml
+++ b/app/src/main/res/layout/activity_cuestionario.xml
@@ -24,7 +24,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="PREGUNTAS"
-                android:textSize="24sp" />
+                android:textColor="#0F5083"
+                android:textSize="24sp"
+                android:textStyle="normal|bold|italic" />
 
             <TextView
                 android:id="@+id/textView5"
@@ -32,7 +34,9 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_horizontal|center_vertical"
                 android:text="Durante las ultimas semanas has sentido algunos de estos sintomas"
-                android:textSize="18sp" />
+                android:textColor="#175485"
+                android:textSize="18sp"
+                android:textStyle="normal|bold|italic" />
 
             <TableLayout
                 android:layout_width="398dp"
@@ -42,11 +46,12 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal">
 
                     <TextView
                         android:id="@+id/textView11"
-                        android:layout_width="82dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="                                                            " />
@@ -57,6 +62,7 @@
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:text="Nunca"
+                        android:textColor="#040000"
                         android:textSize="12sp"
                         android:textStyle="bold" />
 
@@ -66,55 +72,65 @@
                         android:layout_height="wrap_content"
                         android:layout_weight="1"
                         android:text="Aveces"
+                        android:textColor="#090000"
                         android:textStyle="bold" />
 
                     <TextView
                         android:id="@+id/textView14"
-                        android:layout_width="86dp"
+                        android:layout_width="wrap_content"
                         android:layout_height="match_parent"
                         android:layout_weight="1"
                         android:text="Siempre"
+                        android:textColor="#0E0000"
                         android:textStyle="bold" />
                 </TableRow>
 
                 <TableRow
-                    android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_width="320dp"
+                    android:layout_height="wrap_content"
+                    android:gravity="center">
 
                     <TextView
                         android:id="@+id/textView15"
-                        android:layout_width="150dp"
+                        android:layout_width="160dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
-                        android:text="Te sientes deprimido" />
+                        android:text="Te sientes deprimido"
+                        android:textColor="#120101"
+                        android:textSize="14sp"
+                        android:textStyle="normal|bold|italic" />
 
                     <RadioButton
                         android:id="@+id/P1R1"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content" />
+                        android:layout_width="65dp"
+                        android:layout_height="wrap_content"
+                        android:background="#00FFFFFF" />
 
                     <RadioButton
                         android:id="@+id/P1R2"
-                        android:layout_width="wrap_content"
+                        android:layout_width="65dp"
                         android:layout_height="wrap_content" />
 
                     <RadioButton
                         android:id="@+id/P1R3"
-                        android:layout_width="132dp"
+                        android:layout_width="65dp"
                         android:layout_height="wrap_content" />
                 </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal">
 
                     <TextView
                         android:id="@+id/textView40"
-                        android:layout_width="wrap_content"
+                        android:layout_width="160dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
                         android:text="Pensamientos de muerte"
-                        android:textSize="12sp" />
+                        android:textColor="#0B0A0A"
+                        android:textSize="14sp"
+                        android:textStyle="normal|bold|italic" />
 
                     <RadioButton
                         android:id="@+id/P6R1"
@@ -123,25 +139,28 @@
 
                     <RadioButton
                         android:id="@+id/P6R2"
-                        android:layout_width="wrap_content"
+                        android:layout_width="65dp"
                         android:layout_height="wrap_content" />
 
                     <RadioButton
                         android:id="@+id/P6R3"
-                        android:layout_width="wrap_content"
+                        android:layout_width="65dp"
                         android:layout_height="wrap_content" />
                 </TableRow>
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal">
 
                     <TextView
                         android:id="@+id/textView39"
-                        android:layout_width="wrap_content"
+                        android:layout_width="160dp"
                         android:layout_height="wrap_content"
                         android:gravity="end"
-                        android:text="Falta de animo" />
+                        android:text="Falta de animo"
+                        android:textColor="#000000"
+                        android:textStyle="normal|bold|italic" />
 
                     <RadioButton
                         android:id="@+id/P5R1"
@@ -162,14 +181,17 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal">
 
                     <TextView
                         android:id="@+id/textView38"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="end"
-                        android:text="Perdida de apetito" />
+                        android:text="Perdida de apetito"
+                        android:textColor="#000000"
+                        android:textStyle="normal|bold|italic" />
 
                     <RadioButton
                         android:id="@+id/P4R1"
@@ -190,14 +212,17 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal">
 
                     <TextView
                         android:id="@+id/textView16"
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
                         android:gravity="end"
-                        android:text="Poco interes" />
+                        android:text="Poco interes"
+                        android:textColor="#000000"
+                        android:textStyle="normal|bold|italic" />
 
                     <RadioButton
                         android:id="@+id/P2R1"
@@ -217,7 +242,8 @@
 
                 <TableRow
                     android:layout_width="match_parent"
-                    android:layout_height="match_parent">
+                    android:layout_height="match_parent"
+                    android:gravity="center_horizontal">
 
                     <TextView
                         android:id="@+id/textView17"
@@ -226,7 +252,8 @@
                         android:gravity="end"
                         android:text="Problemas de sueño"
                         android:textColor="#000000"
-                        android:textSize="12sp" />
+                        android:textSize="14sp"
+                        android:textStyle="normal|bold|italic" />
 
                     <RadioButton
                         android:id="@+id/P3R1"
