--- a/app/src/main/res/layout/activity_juegos.xml
+++ b/app/src/main/res/layout/activity_juegos.xml
@@ -22,8 +22,7 @@
                 android:id="@+id/imageView7"
                 android:layout_width="120dp"
                 android:layout_height="100dp"
-                android:background="@drawable/entretenimiento"
-                app:srcCompat="@drawable/electronica" />
+                android:background="@drawable/entretenimiento" />
 
             <LinearLayout
                 android:layout_width="wrap_content"
