--- a/app/src/main/res/layout/activity_registro.xml
+++ b/app/src/main/res/layout/activity_registro.xml
@@ -2,7 +2,7 @@
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="match_parent"
     android:background="@drawable/fondob"
     tools:context=".Registro">
@@ -19,8 +19,8 @@
             android:orientation="vertical">
 
             <LinearLayout
-                android:layout_width="259dp"
-                android:layout_height="436dp"
+                android:layout_width="320dp"
+                android:layout_height="480dp"
                 android:background="@drawable/fondomenu"
                 android:gravity="center_horizontal|center_vertical"
                 android:orientation="vertical">
@@ -55,7 +55,7 @@
 
                 <EditText
                     android:id="@+id/nombreid"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="#59FFFFFF"
                     android:ems="10"
@@ -71,7 +71,7 @@
 
                 <EditText
                     android:id="@+id/apellidoid"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="#5BFFFFFF"
                     android:ems="10"
@@ -87,7 +87,7 @@
 
                 <EditText
                     android:id="@+id/emailid"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="#54FFFFFF"
                     android:ems="10"
@@ -102,12 +102,17 @@
 
                 <EditText
                     android:id="@+id/passid"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:background="#6AFFFFFF"
                     android:ems="10"
                     android:gravity="center_horizontal"
                     android:inputType="textPassword" />
+
+                <TextView
+                    android:id="@+id/textView42"
+                    android:layout_width="match_parent"
+                    android:layout_height="wrap_content" />
 
                 <LinearLayout
                     android:layout_width="match_parent"
@@ -116,23 +121,16 @@
 
                     <Button
                         android:id="@+id/button10"
-                        android:layout_width="65dp"
-                        android:layout_height="55dp"
+                        android:layout_width="50dp"
+                        android:layout_height="65dp"
                         android:layout_weight="1"
                         android:background="@drawable/botocuadrad"
                         android:text="atras" />
 
-                    <TextView
-                        android:id="@+id/textView42"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_weight="1"
-                        android:text=" " />
-
                     <Button
                         android:id="@+id/button11"
-                        android:layout_width="65dp"
-                        android:layout_height="55dp"
+                        android:layout_width="60dp"
+                        android:layout_height="65dp"
                         android:layout_weight="1"
                         android:background="@drawable/botocuadrad"
                         android:onClick="registro"
