--- a/app/src/main/res/layout/activity_tareas.xml
+++ b/app/src/main/res/layout/activity_tareas.xml
@@ -27,7 +27,7 @@
 
                 <TextView
                     android:id="@+id/textView62"
-                    android:layout_width="match_parent"
+                    android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center_horizontal|center_vertical"
                     android:text="Agrega tus tareas a recordar aqui!"
@@ -51,11 +51,41 @@
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content" />
 
-                <CalendarView
-                    android:id="@+id/calendarView"
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:background="#4FFFFFFF" />
+                <LinearLayout
+                    android:layout_width="380dp"
+                    android:layout_height="380dp"
+                    android:background="#8D03A9F4"
+                    android:gravity="center_horizontal|center_vertical"
+                    android:orientation="vertical">
+
+                    <CalendarView
+                        android:id="@+id/calendarView"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:background="#4FFFFFFF" />
+                </LinearLayout>
+
+                <LinearLayout
+                    android:layout_width="match_parent"
+                    android:layout_height="match_parent"
+                    android:orientation="horizontal">
+
+                    <Button
+                        android:id="@+id/button29"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#6603A9F4"
+                        android:text="Nueva Tarea" />
+
+                    <Button
+                        android:id="@+id/button30"
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:layout_weight="1"
+                        android:background="#5200BCD4"
+                        android:text="ver tareas" />
+                </LinearLayout>
 
             </LinearLayout>
 
