Se centra titulo de aplicacion

--- a/app/src/main/res/layout/activity_menu.xml
+++ b/app/src/main/res/layout/activity_menu.xml
@@ -21,7 +21,9 @@
                 android:id="@+id/textView64"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:layout_gravity="center"
                 android:fontFamily="cursive"
+                android:foregroundGravity="center"
                 android:gravity="center"
                 android:text="Balance"
                 android:textSize="36sp" />
